Initial addition of the S2I tests

--- a/1/Dockerfile
+++ b/1/Dockerfile
@@ -41,6 +41,7 @@ COPY ./contrib/jenkins /usr/local/bin
 ADD ./contrib/s2i /usr/libexec/s2i
 
 RUN /usr/local/bin/plugins.sh /opt/openshift/base-plugins.txt && \
+    chown -R 1001:0 /opt/openshift && \
     /usr/local/bin/fix-permissions /opt/openshift && \
     /usr/local/bin/fix-permissions /var/lib/jenkins
 
